// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Async fetchAllPhotos fetch all photos 1`] = `
Array [
  Object {
    "totalPhotos": 50,
    "type": "GET_ALL_PHOTOS",
  },
]
`;

exports[`Async getPhotos gets photos 1`] = `
Array [
  Object {
    "photos": Array [],
    "type": "GET_PHOTOS",
  },
]
`;
